fixed issue losing use data on reload. verifyAuth now RETURNING the http request

--- a/src/pages/home/_home.html
+++ b/src/pages/home/_home.html
@@ -6,4 +6,35 @@
     user="home._User" >
   </greet-user >
 
+  <div ng-if="!home._User">
+    <p class="col-md-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Ad delectus eius ex incidunt laborum nam praesentium sit
+      veritatis. Culpa, magni necessitatibus officiis recusandae
+      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
+      consectetur adipisicing elit.Ad delectus eius ex incidunt
+      laborum nam praesentium sitveritatis. Culpa, magni
+      necessitatibus officiis recusandae Lorem ipsum dolor sit amet,
+      Ad delectus eius ex incidunt laborum nam praesentium sit
+      veritatis. Culpa, magni necessitatibus officiis recusandae
+      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
+      consectetur adipisicing elit.Ad delectus eius ex incidunt
+      laborum nam praesentium sitveritatis. Culpa, magni
+      necessitatibus officiis recusandae
+    </p>
+    <p class="col-md-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Ad delectus eius ex incidunt laborum nam praesentium sit
+      veritatis. Culpa, magni necessitatibus officiis recusandae
+      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
+      consectetur adipisicing elit.Ad delectus eius ex incidunt
+      laborum nam praesentium sitveritatis. Culpa, magni
+      necessitatibus officiis recusandaeLorem ipsum dolor sit amet,
+      Ad delectus eius ex incidunt laborum nam praesentium sit
+      veritatis. Culpa, magni necessitatibus officiis recusandae
+      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
+      consectetur adipisicing elit.Ad delectus eius
+    </p>
+  </div>
+
 </div>
