--- a/src/pages/auth/_auth.html
+++ b/src/pages/auth/_auth.html
@@ -13,7 +13,7 @@
         <form ng-submit="auth.submitForm()">
           <fieldset>
 
-            <fieldset class="form-group">
+            <fieldset class="form-group" ng-show="auth.authType === 'register'">
               <input class="form-control form-control-lg"
                      type="text"
                      placeholder="Username"
