--- a/src/pages/auth/_auth.html
+++ b/src/pages/auth/_auth.html
@@ -4,14 +4,13 @@
 
       <div class="col-md-6 offset-md-3 col-xs-12">
         <h1 class="text-xs-center" ng-bind="auth.title"></h1>
-        <p class="text-xs-center">
-          <a href="">
-            Have an account?
-          </a>
-        </p>
+
+        <user-error
+          message="auth.error">
+        </user-error>
 
         <form ng-submit="auth.submitForm()">
-          <fieldset>
+          <fieldset ng-disabled="auth.isSubmitting">
 
             <fieldset class="form-group" ng-show="auth.authType === 'register'">
               <input class="form-control form-control-lg"
