sign up - login

--- a/src/pages/auth/_auth.html
+++ b/src/pages/auth/_auth.html
@@ -10,7 +10,7 @@
         </user-error>
 
         <form ng-submit="auth.submitForm()">
-          <fieldset ng-disabled="auth.isSubmitting">
+          <fieldset ng-disabled="">
 
             <fieldset class="form-group" ng-show="auth.authType === 'register'">
               <input class="form-control form-control-lg"
