--- a/src/pages/home/_home.html
+++ b/src/pages/home/_home.html
@@ -1,40 +1,81 @@
 <div id="home-page" class="container-fluid">
 
-  <hr />
+  <nav  class="navbar navbar-light bg-faded" style="background-color: #e3f2fd;">
+    <ul class="nav navbar-nav">
 
-  <greet-user
-    user="home._User" >
-  </greet-user >
+      <li class="navbar-form">
+        <div class="form-inline">
+          <input type="text" placeholder="search" class="form-control" ng-model="home.searchText">
+        </div>
+      </li>
 
-  <div ng-if="!home._User">
-    <p class="col-md-6">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Ad delectus eius ex incidunt laborum nam praesentium sit
-      veritatis. Culpa, magni necessitatibus officiis recusandae
-      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
-      consectetur adipisicing elit.Ad delectus eius ex incidunt
-      laborum nam praesentium sitveritatis. Culpa, magni
-      necessitatibus officiis recusandae Lorem ipsum dolor sit amet,
-      Ad delectus eius ex incidunt laborum nam praesentium sit
-      veritatis. Culpa, magni necessitatibus officiis recusandae
-      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
-      consectetur adipisicing elit.Ad delectus eius ex incidunt
-      laborum nam praesentium sitveritatis. Culpa, magni
-      necessitatibus officiis recusandae
-    </p>
-    <p class="col-md-6">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Ad delectus eius ex incidunt laborum nam praesentium sit
-      veritatis. Culpa, magni necessitatibus officiis recusandae
-      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
-      consectetur adipisicing elit.Ad delectus eius ex incidunt
-      laborum nam praesentium sitveritatis. Culpa, magni
-      necessitatibus officiis recusandaeLorem ipsum dolor sit amet,
-      Ad delectus eius ex incidunt laborum nam praesentium sit
-      veritatis. Culpa, magni necessitatibus officiis recusandae
-      tempora voluptatum! Blanditiis eveniet harum molestias nulla!
-      consectetur adipisicing elit.Ad delectus eius
-    </p>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+          <span>Sort by {{ home.currentSort }}</span>
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li ng-repeat="field in home.sortableFields">
+            <a href="#" ng-click="home.setOrderVal(field)">
+              Sort by {{field}}
+            </a>
+          </li>
+        </ul>
+      </li>
+
+    </ul>
+  </nav>
+
+
+
+  <div ng-repeat="x in home._Posts | orderBy: home.orderVal | filter: home.searchText" class="row post">
+    <div class="col-xs-2">
+      <img class="img-responsive"  ng-src="{{x.image}}" alt="post image " >
+    </div>
+
+    <article class="col-xs-10">
+
+      <h3>
+        {{x.title}}
+        <span ng-click="home.changeVotes(x.post_id, 'up')" class="glyphicon glyphicon-arrow-up"></span>
+        <span ng-click="home.changeVotes(x.post_id, 'down')" class="glyphicon glyphicon-arrow-down"></span>
+        <span ng-class="home.upvoteClass(x)">{{x.votes}}</span>
+      </h3>
+
+      <p class="pull-right">By {{ x.username }}</p>
+      <p class="clear">{{ x.description }}</p>
+
+      <span class="hoverable" ng-click="home.toggleCommentListVisibility(x)">
+        <span class="glyphicon glyphicon-comment"></span>
+        <ng-pluralize
+          count="x.comments.length"
+          when="{1: '1 comment', 'other': '{{ x.comments.length }} comments'}">
+        </ng-pluralize>
+      </span>
+      <span> | </span>
+      <span class="hoverable" ng-click="home.toggleNewCommentVisibility(x)">
+          <span class="glyphicon glyphicon-pencil"></span>
+          Add comment
+      </span>
+
+      <div class="comment" ng-show="x.commentFormVisible">
+        <form class="form-inline" ng-submit="home.addComment(newComment, x)">
+          <div class="form-group">
+            <label>Text</label>
+            <input type="text" placeholder="text" class="form-control" ng-model="newComment.text">
+          </div>
+          <input class="btn btn-success" type="submit" value="Add Comment">
+        </form>
+      </div>
+
+      <div class="comment" ng-show="x.commentListVisible">
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="comment in x.comments">
+            {{ comment.text }}
+          </li>
+        </ul>
+      </div>
+
+    </article>
   </div>
-
 </div>
